<resources>
    <string name="app_name">Conversor de Moedas</string>
    <string name="qual_o_valor_em_real">Qual o valor em real?</string>
    <string name="valor_em_dolar">Valor em Dólar:</string>
    <string name="valor_em_euro">Valor em Euro:</string>
    <string name="calcular">Calcular</string>
    <string name="toastErrorMessage">Entre com um valor!</string>
    <string name="vai_carai">Vai carai</string>
    <string name="cotacao_online">Cotação Online?</string>
</resources>
