<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/qual_o_valor_em_real"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edit_value"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        android:text=""
        android:textAlignment="center" />

    <Switch
        android:id="@+id/switch_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:switchMinWidth="56dp"
        android:text="@string/cotacao_online"
        android:textOff="OFF"
        android:textOn="ON" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/valor_em_dolar"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_dolar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="valor em dolar"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/valor_em_euro"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="valor em euro"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@color/colorAccent"
        android:text="@string/calcular"
        android:textColor="@color/colorLight"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_cotacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:text="Baseado na cotação do Dolar a XXX e do Euro a XXX"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />


</LinearLayout>